<resources>
    <string name="app_name">VotingApp</string>
    <string name="home">Home</string>
    <string name="vote">Vote</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="govote">GoVote</string>
    <string name="welcome">Welcome!</string>
    <string name="view_all">View All</string>
    <string name="result">Result</string>
    <string name="user">User</string>
    <string name="previousElection">Previous Election</string>
    <string name="ongoingElection">Ongoing Election</string>
    <string name="president">President</string>
    <string name="amanda">Chinweze Chimamanda</string>
    <string name="votes">500</string>
    <string name="voteText">Vote(s)</string>
    <string name="candidate_s_name">Candidate\'s Name</string>
    <string name="post">Post</string>
    <string name="candidate_s_level">Candidate\'s Level</string>
    <string name="add">Add</string>
    <string name="candidate_s_gender">Candidate\'s Gender</string>
    <string name="candidate_s_department">Candidate\'s Department</string>
    <string name="candidate_s_post">Candidate\'s Post</string>
    <string name="candidate_s_manifesto">Candidate\'s Manifesto</string>
    <string name="start">Start</string>
    <string name="my_profile">My Profile</string>
    <string name="username">Username</string>
    <string name="my_account">My Account</string>
    <string name="help_center">Help Center</string>
    <string name="notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account_register">Dont have an account? Register</string>
    <string name="forget_password">Forget password?</string>
    <string name="go_cast">GoCast</string>
    <string name="reset">Reset</string>
    <string name="enter_your_reg_number">Enter your Reg. Number</string>
    <string name="enter_your_full_name">Enter your Full name</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="reg_number">Registration Number</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="apply_for_post">Apply for a post</string>
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>
    <string name="time">2s</string>
</resources>