<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="400dp"
    android:background="@color/white"
    android:padding="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/userPic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/user_profile_pic" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPic"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/amanda"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fullname"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:text="@string/president"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/voteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/votes"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/votesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/voteCount"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:text="@string/voteText"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>