<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/notificationCard"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <ImageView
            android:id="@+id/userPic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:src="@drawable/user_profile_pic" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/userPic"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/userPic"
            android:fontFamily="sans-serif-medium"
            android:text="@string/amanda"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewUserName"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/userPic"
            android:fontFamily="sans-serif"
            android:text="@string/amanda"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textViewCategory"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/userPic"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/time"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonApprove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_green"
                android:text="@string/approve"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonDecline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_red"
                android:text="@string/decline"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>