<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/welcome"
                android:textColor="@color/sky_blue"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/user"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeText" />

            <RelativeLayout
                android:id="@+id/resultSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user">

                <TextView
                    android:id="@+id/resultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/ongoingElection"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/oEViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/resultText"
                    android:layout_alignBottom="@id/resultText"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="sans-serif"
                    android:text="@string/view_all"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/onGoingRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/resultText"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/previousElectionSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resultSection">

                <TextView
                    android:id="@+id/previousText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/previousElection"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <!--                <TextView-->
                <!--                    android:id="@+id/pEViewAll"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_alignTop="@id/previousText"-->
                <!--                    android:layout_alignBottom="@id/previousText"-->
                <!--                    android:layout_alignParentEnd="true"-->
                <!--                    android:fontFamily="sans-serif"-->
                <!--                    android:text="@string/view_all"-->
                <!--                    android:textColor="@color/black"-->
                <!--                    android:textSize="18sp" />-->

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/previousElectionRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/previousText"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</FrameLayout>