<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/previousElectionCard"
    android:layout_width="250dp"
    android:layout_height="300dp"
    android:layout_margin="16dp"
    android:layout_marginEnd="20dp"
    android:background="@color/white"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/userPic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/user_profile_pic" />

        <TextView
            android:id="@+id/ogName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPic"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/amanda"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/ogPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ogName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/president"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ogUser_sLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ogPost"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/candidate_s_level"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

<!--        <TextView-->
<!--            android:id="@+id/ogVoteCount"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/ogPost"-->
<!--            android:layout_alignParentStart="true"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_marginTop="80dp"-->
<!--            android:fontFamily="sans-serif-black"-->
<!--            android:text="@string/votes"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/ogVotesText"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/ogVoteCount"-->
<!--            android:layout_alignParentStart="true"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_marginTop="3dp"-->
<!--            android:fontFamily="sans-serif"-->
<!--            android:text="@string/voteText"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="15sp" />-->


    </RelativeLayout>


</androidx.cardview.widget.CardView>